--- a/src/main/webapp/WEB-INF/views/books/show.html
+++ b/src/main/webapp/WEB-INF/views/books/show.html
@@ -2,7 +2,7 @@
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Страница с пользователями</title>
+    <title>Страница с книгами</title>
     <style>
         /* Добавьте стили CSS для отображения пользователей вертикально */
         .user-card {
@@ -21,20 +21,20 @@
 </head>
 <body>
 
-<h1>Пользователи</h1>
+<h1>Книги</h1>
 
 <!-- Отображение информации о пользователях -->
-<div th:each="person : ${people}" class="user-card">
+<div th:each="book : ${books}" class="user-card">
     <div>
-        <a th:href="@{/people/{id}(id=${person.getId()})}">
-            <span th:text="${person.getName()}">User</span>
+        <a th:href="@{/books/{id}(id=${book.getId()})}">
+            <span th:text="${book.getTitle()}">User</span>
         </a>
     </div>
 </div>
 
 <!-- Форма для оставления комментариев -->
 <div class="comment-box">
-    <h2>Добавить пользователя</h2>
+    <h2>Добавить книгу</h2>
     <button onclick="window.location.href = 'new.html'">добавить</button>
 </div>
 
