--- a/src/main/webapp/WEB-INF/views/people/id.html
+++ b/src/main/webapp/WEB-INF/views/people/id.html
@@ -5,7 +5,7 @@
     <title>id</title>
 </head>
 <body>
-<h4> ваше id: </h4>
+<h4> ваш id: </h4>
 <p th:text="${person.getId()}">VALUE</p>
 <br/>
 <br/>
