--- a/src/main/webapp/WEB-INF/views/books/edit.html
+++ b/src/main/webapp/WEB-INF/views/books/edit.html
@@ -9,12 +9,15 @@
 <form th:method="PATCH" th:action="@{/books/{id}(id=${book.getId()})}" th:object="${book}">
   <label for="title">Введите название книги: </label>
   <input type="text" th:field="*{title}" id="title"/>
+  <div style="color: red" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">error</div>
   <br/>
   <label for="author">Введите автора книги: </label>
   <input type="text" th:field="*{author}" id="author"/>
+  <div style="color: red" th:if="${#fields.hasErrors('author')}" th:errors="*{author}">error</div>
   <br/>
   <label for="year">Введите год книги: </label>
   <input type="text" th:field="*{year}" id="year"/>
+  <div style="color: red" th:if="${#fields.hasErrors('year')}" th:errors="*{year}">error</div>
   <br/>
   <input type="submit" value="Обновить"/>
 </form>
