--- a/src/main/webapp/WEB-INF/views/people/edit.html
+++ b/src/main/webapp/WEB-INF/views/people/edit.html
@@ -9,9 +9,11 @@
 <form th:method="PATCH" th:action="@{/people/{id}(id=${person.getId()})}" th:object="${person}">
   <label for="name">Введите имя: </label>
   <input type="text" th:field="*{name}" id="name"/>
+  <div style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">error</div>
   <br/>
   <label for="age">Введите возраст: </label>
   <input type="text" th:field="*{age}" id="age"/>
+  <div style="color: red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">error</div>
   <br/>
   <input type="submit" value="Обновить"/>
 </form>
