--- a/src/main/webapp/WEB-INF/views/books/id.html
+++ b/src/main/webapp/WEB-INF/views/books/id.html
@@ -5,7 +5,7 @@
     <title>id</title>
 </head>
 <body>
-<h4> ваш id: </h4>
+<h4> id: </h4>
 <p th:text="${book.getId()}">VALUE</p>
 <br/>
 <br/>
@@ -16,7 +16,25 @@
 <p th:text="${book.getAuthor()}">VALUE</p>
 <br/>
 <h4> год книги: </h4>
-<p th:text="${book.getYear()}">VALUE</p>
+<p th:text="${book.getYear()}">VALUE </p>
+<br/>
+<div th:if="${owner}">
+    <span>Книга сейчас у: </span> <span th:text="${owner.getName()}">Person Name</span>
+    <form th:method="PATCH" th:action="@{/books/{id}/release(id=${book.getId()})}">
+        <input type="submit" value="Освободить книгу">
+    </form>
+</div>
+<div th:if="${people}">
+    <span>Эта книга свободна. Кому назначить её?</span>
+    <form th:method="PATCH" th:action="@{/books/{id}/assign(id=${book.getId()})}">
+    <label for="person">Все кто может взять книгу:</label>
+    <select th:object="${person}" th:field="*{id}" id="person">
+        <option th:each="person: ${people}" th:value="${person.getId()}"
+                th:text="${person.getName()}"></option>
+    </select>
+    <input type="submit" value="взять"/>
+    </form>
+</div>
 <br/>
 <a th:href="@{/books/{id}/edit(id=${book.getId()})}"><button>Изменить</button></a>
 <br/>
